# personal-tracker

./: .gitignore  Cargo.toml  drivers_license.db  flake.nix  reset.py  seed.py  work_tracker.db
src/: dienstplan.rs  drivers_license_tracker.rs  main.rs  settings.rs  tabs.rs  test_utils.rs  ui.rs  work_tracker.rs
src/tabs/: drivers_license.rs  home.rs  mod.rs  settings.rs  work.rs
