[package]
name = "personal-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
eframe = "0.34.1"
egui = "0.34.1"
egui_extras = "0.34.1"
egui_material_icons = "0.6.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
